[tool.poetry]
name = "template_app"
version = "1.0.0"
description = "Example template for Python applications"
authors = ["Marius Arlauskas"]
readme = "README.md"
package-mode = true

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.dependencies]
python = "~3.11"

[tool.poetry.group.development.dependencies]
python-dotenv = "^1.0.1"
ruff = "^0.9.5"
pytest = "^8.3.4"
pickleshare = "^0.7.5"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN002",  # Missing type annotation for args
  "ANN003",  # Missing type annotation for kwarg
  "ANN401",  # Dynamic type annotations
  "COM812",  # Missing trailing comma
  "D100",    # Missing docstring in public module
  "D101",    # Missing docstring in public class (for obvious classes)
  "D103",    # Missing docstring in public function (for obvious functions)
  "D104",    # Missing docstring in public package
  "FBT001",  # Bool use in arg
  "FBT002",  # Default bool use in arg
  "G004",    # Logging with f-strings
  "INP001",  # Missing __init__.py in package
  "PLR0913", # Too many arguments (ignored if default args are used)
  "S101",    # Use of assert
  "SLF001",  # Access to a private member (for tests only)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"